Moved blog classes to explicit packages and refactored code from scan issues closes #208